--- a/Class/Class7-1/css/mobileGrid.css
+++ b/Class/Class7-1/css/mobileGrid.css
@@ -110,6 +110,8 @@ background-color: pink;
 {
   width: 100%;
   height: 100vh;
+  display: grid;
+  grid-template-rows: 10% 10% 60% 20%;
   /* Display the grids in a friendly mobile version */
 
 }
@@ -138,6 +140,12 @@ background-color: pink;
 {
   width: 100%;
   height: 100%;
+
+  display: grid;
+  grid-template-rows: 50% 47%;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
 
 /* Display your smaller grid with just rows */
 
