--- a/HomeWork/Final/FinalCSS/StyleContact.css
+++ b/HomeWork/Final/FinalCSS/StyleContact.css
@@ -1,7 +1,8 @@
-body
-{
-  background-color: black;
-
+body {
+  background-image: url("../img/back1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .gridLayout
 {
@@ -23,7 +24,6 @@ body
 {
   text-align: center;
   grid-area: hea;
-  background-color: black;
   margin-top : -18vh;
 }
 
