--- a/HomeWork/Final/FinalCSS/StyleW.css
+++ b/HomeWork/Final/FinalCSS/StyleW.css
@@ -1,184 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Notable&display=swap');
 
 body
 {
-
   background-color: black;
-
 }
 
-
-#box {
-  width: 100px;
-  height: 100px;
+.ml4 {
+  font-family: monospace;
+  font-size: 85px;
+  text-shadow: 4px 4px #ff0000;
+  top: 300px;
+  color: #fc034e;
+  text-align: center;
+  position: relative;
+  font-weight: 900;
+}
+.ml4 .letters {
   position: absolute;
-  top: 50px;
-  left: 50px;
-  background: $tc-green;
-}
-
-.gridLayout
-{
-  width: 80%;
-  height: 200vh;
   margin: auto;
-  margin-top: 150px;
-  display: grid;
-  grid-template-areas:  "hea hea  hea"
-                        "nav main main"
-                        "nav main main"
-                        "foo foo foo";
-
-  grid-template-rows: 10% 100px 20% 5em;
-  grid-template-columns: .5fr 1fr 1fr;
-
+  left: 0;
+  top: 0.3em;
+  right: 0;
+  opacity: 0;
 }
-.gridLayout header
-{
-  text-align: center;
-  grid-area: hea;
-  background-color: black;
-  margin-top: -20vh
-}
-
-}
-.gridLayout main
-{
-  grid-area: main;
-  background-color: black;
-}
-
-.lettering
-{
-  font-size: 45px;
-  text-transform: uppercase;
-  display: block;
-  letter-spacing: 10px;
-  color: white;
-}
-
-#SB
-{
-  height: 850px;
-  width: 500px;
-  float: right;
-}
-#Logo
-{
-  object-position: 50% 50%;
-      width: 90px;
-      height: 90px;
-      object-fit: contain;
-}
-.LogoContainer
+#arrow
 {
   position: absolute;
-  right: 950px;
-  width: 200px;
-  height: 120px;
+  width: 100px;
+  right: 1200px;
+  top: 20px;
 }
-h1
-{
-  color: #B38A4C;
-  font-size: 80px;
-  font-family: sans-serif;
-  text-align: center;
-}
-h3
-{
-  color: white;
-}
-
-.link {
-  text-align: center;
-	outline: none;
-	text-decoration: none;
-	position: relative;
-	font-size: 7em;
-	line-height: 1;
-	color: white;
-	display: inline-block;
-}
-.link--kukuri {
-	text-transform: uppercase;
-	font-weight: 900;
-	overflow: hidden;
-	line-height: 0.75;
-	color: #b2b0a9;
-}
-
-.link--kukuri:hover {
-	color: #b2b0a9;
-}
-
-.link--kukuri::after {
-	content: '';
-	position: absolute;gi
-	height: 16px;
-	width: 100%;
-	top: 50%;
-	margin-top: -8px;
-	right: 0;
-	background: #F9F9F9;
-	transform: translate3d(-100%,0,0);
-	transition: transform 0.4s;
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-}
-
-.link--kukuri:hover::after {
-	transform: translate3d(100%,0,0);
-}
-
-.link--kukuri::before {
-	content: attr(data-letters);
-	position: absolute;
-	z-index: 2;
-	overflow: hidden;
-	color: #424242;
-	white-space: nowrap;
-	width: 0%;
-	transition: width 0.4s 0.3s;
-}
-
-.link--kukuri:hover::before {
-	width: 100%;
-}
-h4
-{
-color: white;
-font-family: sans-serif;
-text-align: center;
-font-size: 40px;
-width: 480px;
-
-}
-
-h5
-{
-  color: white;
-  text-align: left;
-  font-size: 20px;
-  text-align: center;
-}
-h6
-{
-  color: white;
-  font-size: 25px;
-  width: 480px;
-}
-
-
-.ContainerA
-{
-  position: absolute;
-    right: 350px;
-    width: 200px;
-    height: 120px;
-
-}
-
-
-
 
 /* Nav Bar ONLY */
 #cssmenu {
